# test-quiz

./: README.md
back/: .gitignore  Cargo.toml
back/src/: main.rs
front/: .eslintrc.json  README.md  angular.json  package-lock.json  package.json
front/src/: index.html  proxy.conf.json  styles.css
front/src/app/: app.component.html  app.component.ts  app.routes.ts
front/src/app/components/answer-input/: answer-input.component.css  answer-input.component.html  answer-input.component.spec.ts  answer-input.component.ts
front/src/app/components/game/: game.component.css  game.component.html  game.component.ts
front/src/app/components/header/: header.component.css  header.component.html  header.component.ts
front/src/app/components/home/: home.component.css  home.component.html  home.component.ts
front/src/app/guards/: game.guard.spec.ts  game.guard.ts  question.guard.spec.ts  question.guard.ts  results.guard.spec.ts  results.guard.ts
front/src/app/models/: answered-question.ts  game-run.ts  game-state.ts  question-set.ts  question.ts  score.ts
front/src/app/pipes/: pad-number.pipe.spec.ts  pad-number.pipe.ts
front/src/app/services/: game-signals.service.spec.ts  game-signals.service.ts  game.service.ts  local-storage.service.ts  rest.service.ts
front/src/app/state/: game.store.spec.ts  game.store.ts  question.store.spec.ts  question.store.ts  score-board.store.spec.ts  score-board.store.ts
front/src/app/utils/: answer-verification.utils.spec.ts  answer-verification.utils.ts  hash.utils.spec.ts  hash.utils.ts
front/src/assets/fonts/: fonts.css
(+7 files in other folders)
