[package]
name = "test-quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = "0.8.0"
actix-web = "4.4.0"
log = "0.4.20"
env_logger = "0.10.1"
reqwest = "0.11.22"
mime_guess = "2.0.4"